# GeneAbacus-python

./: README.md  setup.cfg
.sourcehut/: arch.yml
src/geneabacus/: profileio.py
