[metadata]
name = geneabacus
version = 0.1
author = Charles E. Vejnar
description = Counts and profiles sequencing reads within genes, chromosomes or constructs.
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://github.com/vejnar/geneabacus-python

[options]
install_requires =
    lz4
    numpy
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
