[metadata]
name = geneabacus
author = Charles E. Vejnar
description = Python IO functions for GeneAbacus
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://git.sr.ht/~vejnar/GeneAbacus-python

[options]
install_requires =
    lz4
    numpy
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
